[package]
name = "godo-launcher"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
colog = "1.3.0"
log = "0.4.22"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
winres = "0.1"